--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMeqkDVsQlF2Gftd+tp+9XF",
+      "authorship_tag": "ABX9TyMhzJVXD0/0BSgW4FLBPYva",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,19 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lyHmDVratn4E",
-        "outputId": "e3ea30f2-863e-4a22-9be8-3e48bc672ba8"
+        "outputId": "2037d7e3-891b-474b-ae77-1e1a59a586be"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "<Response [200]>\n",
             "<Response [200]>\n"
           ]
         }
@@ -48,9 +49,13 @@
       "source": [
         "import requests\n",
         "\n",
-        "url = \"https://www.google.com\"\n",
+        "url = 'https://www.google.com'\n",
         "a = requests.get(url)\n",
+        "\n",
+        "url2 = 'https://www.baidu.com'\n",
+        "b = requests.get(url2)\n",
         "print(a)\n",
+        "print(b)\n",
         "\n",
         "\n"
       ]
